--- a/index.html
+++ b/index.html
@@ -21,6 +21,42 @@
             </ul>
         </nav>
     </header>
+
+    <div class="Slider">
+        <div class="Slider-container">
+           <img src="assets/Slider/car-1.jfif" alt="Imagen 1" class="Slider-img">
+           <img src="assets/Slider/car-2.jfif" alt="Imagen 2" class="Slider-img">
+           <img src="assets/Slider/car-3.jfif" alt="Imagen 3" class="Slider-img">
+           <img src="assets/Slider/car-4.jfif" alt="Imagen 4" class="Slider-img">
+           <img src="assets/Slider/car-5.jfif" alt="Imagen 5" class="Slider-img">
+        </div>
+    
+        <button class="Slider-arrow Slider-arrow--next">
+            <img src="assets/Svg/next_square.svg" alt="">
+        </button>
+
+        <button class="Slider-arrow Slider-arrow--prev">
+            <img src="assets/Svg/prev_square.svg" alt="">
+        </button>
+
+        <ul class="Slider-ul">
+            <li class="Slider-li">
+                <button class="Slider-btn isActive"></button>
+            </li>
+            <li class="Slider-li">
+                <button class="Slider-btn"></button>
+            </li>
+            <li class="Slider-li">
+                <button class="Slider-btn"></button>
+            </li>
+            <li class="Slider-li">
+                <button class="Slider-btn"></button>
+            </li>
+            <li class="Slider-li">
+                <button class="Slider-btn"></button>
+            </li>
+        </ul>
+    </div>
     
 </body>
 </html>
