--- a/index.html
+++ b/index.html
@@ -57,6 +57,41 @@
             </li>
         </ul>
     </div>
-    
+
+    <section class="Info">
+        <div class="Info-block left">
+            <span class="Info-span">
+                T. 954075072 / Solo whatsap 638000274
+            </span>
+            <span class="Info-span">
+                CALLE JOSE SARABIA 11
+            </span>
+            <span class="Info-span">
+                41006 Sevilla (Sevilla)
+            </span>
+        </div>
+        <div class="Info-block">
+            <h2 class="Info-h2">
+                Precio/hora
+            </h2>
+            <h3 class="Info-h3">
+                46 €
+            </h3>
+        </div>
+        <div class="Info-block right">
+            <h2 class="Info-h2">
+                Horario
+            </h2>
+            <span class="Info-span">
+                De 08:30-14:00 horas
+            </span>
+            <span class="Info-span">
+                De 15:30-18:30 horas
+            </span>
+            <span class="Info-span">
+                Verano 7:30 - 15:30
+            </span>
+        </div>
+    </section>
 </body>
 </html>
