--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 41006 Sevilla (Sevilla)
             </span>
         </div>
-        <div class="Info-block">
+        <div class="Info-block center">
             <h2 class="Info-h2">
                 Precio/hora
             </h2>
