--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
             <span class="Info-span">
                 De 15:30-18:30 horas
             </span>
-            <span class="Info-span">
+            <span class="Info-span--end">
                 Verano 7:30 - 15:30
             </span>
         </div>
     </section>
+
 </body>
 </html>
