--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <header class="Header">
 
         <h1 class="Header-h1">TALLERES LARAUTO</h1>
+        
         <nav class="Header-nav">
+            <svg class="Header-svg">
+                <path d="M0,5h30v3.3H0V5z M0,13.3h30v3.3H0V13.3z M0,21.7h30V25H0V21.7z"></path>
+            </svg>
             <ul class="Header-ul">
                 <li class="Header-li">EL TALLER</li>
                 <li class="Header-li">SERVICIOS</li>
