--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <h1 class="Header-h1">TALLERES LARAUTO</h1>
         
         <nav class="Header-nav">
-            <svg class="Header-svg">
+            <svg class="Header-svg" width="100" height="100" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0,5h30v3.3H0V5z M0,13.3h30v3.3H0V13.3z M0,21.7h30V25H0V21.7z"></path>
             </svg>
+              
             <ul class="Header-ul">
                 <li class="Header-li">EL TALLER</li>
                 <li class="Header-li">SERVICIOS</li>
