--- a/index.html
+++ b/index.html
@@ -315,6 +315,32 @@
         <a href="https://www.google.com/maps/?q=37.3714201,-5.9522825" class="Map-a"></a>
     </div>
 
+    <section class="Offers">
+        <div class="Offers-container">
+            <h2 class="Offers-h2">
+                ¡No se pierda ninguna de nuestras ofertas!
+            </h2>
+            <span class="Offers-span">
+                Inscríbase a nuestro boletín semanal de novedades y promociones
+            </span>
+
+            <form class="Offer-form" action="submit">
+                <div class="Offer-fields">
+                    <input class="Offer-plh" type="text" name="Nombre" id="name" placeholder="Nombre">
+                    <input class="Offer-plh" type="text" name="Apellidos" id="lastname" placeholder="Apellidos">
+                    <input class="Offer-plh" type="text" name="Email" id="mail" placeholder="Email">
+                </div>
+                <div class="Offer-terms">
+                    <button class="Offer-button"></button>
+                    <span class="Offer-label">  
+                        He leído y acepto que mis datos sean tratados por TALLERES LARAUTO, con la finalidad de recibir publicidad o información promocional sobre los productos y/o servicios que ofrecen, así como suscribirme a su Newsletter, pulsando sobre la casilla de verificación, de conformidad con la <a target="_blank" href="#">Política de Privacidad</a> 
+                    </span>
+                </div>
+                <input class="Offer-submit" type="submit" value="Enviar">
+            </form>
+        </div>
+    </section>
+
 
 </body>
 </html>
