--- a/index.html
+++ b/index.html
@@ -331,7 +331,10 @@
                     <input class="Offer-plh" type="text" name="Email" id="mail" placeholder="Email">
                 </div>
                 <div class="Offer-terms">
-                    <button class="Offer-button"></button>
+                    <div class="Offer-btncontainer">
+                        <button class="Offer-button"></button>
+                    </div>
+                    
                     <span class="Offer-label">  
                         He leído y acepto que mis datos sean tratados por TALLERES LARAUTO, con la finalidad de recibir publicidad o información promocional sobre los productos y/o servicios que ofrecen, así como suscribirme a su Newsletter, pulsando sobre la casilla de verificación, de conformidad con la <a target="_blank" href="#">Política de Privacidad</a> 
                     </span>
