--- a/index.html
+++ b/index.html
@@ -339,10 +339,41 @@
                         He leído y acepto que mis datos sean tratados por TALLERES LARAUTO, con la finalidad de recibir publicidad o información promocional sobre los productos y/o servicios que ofrecen, así como suscribirme a su Newsletter, pulsando sobre la casilla de verificación, de conformidad con la <a target="_blank" href="#">Política de Privacidad</a> 
                     </span>
                 </div>
-                <input class="Offer-submit" type="submit" value="Enviar">
+                <div class="Offer-input">
+                    <input class="Offer-submit" type="submit" value="Enviar">
+                </div>
+                
             </form>
         </div>
     </section>
+
+    <footer class="Footer">
+        <div class="Footer-container">
+            <div class="Footer-wrapper">
+                <h2 class="Footer-h2">Información</h2>
+                <ul class="Footer-ul">
+                    <li class="Footer-li">
+                    Aviso legal y condiciones de uso
+                    </li>
+                    <li class="Footer-li">
+                    Política de privacidad
+                    </li>
+                    <li class="Footer-li">
+                    Política de cookies
+                    </li>
+                    <li class="Footer-li">
+                    Configuración de cookies
+                    </li>
+                </ul>
+            <div class="Footer-copyright">
+                <span class="Footer-span">
+                    Copyright © 2024 Grup Eina Digital, S.L. Todos los derechos reservados.
+                </span>
+            </div>
+            
+            </div>
+        </div>
+    </footer>
 
 
 </body>
