--- a/index.html
+++ b/index.html
@@ -19,12 +19,28 @@
             </svg>
               
             <ul class="Header-ul">
-                <li class="Header-li">EL TALLER</li>
-                <li class="Header-li">SERVICIOS</li>
+                <li class="Header-li">EL TALLER
+                  <ul class="Sublist-ul">
+                    <li class="Sublist-li">El taller</li>
+                    <li class="Sublist-li">Galeria de imágenes</li>
+                    <li class="Sublist-li">Equipamiento</li>
+                  </ul>
+                </li>
+                <li class="Header-li">SERVICIOS
+                  <ul class="Sublist-ul">
+                    <li class="Sublist-li">Servicios</li>
+                    <li class="Sublist-li">Solicitar cita previa</li>
+                    <li class="Sublist-li">Solicitar presupuesto</li>
+                  </ul>
+                </li>
                 <li class="Header-li">OFERTAS</li>
-                <li class="Header-li">VEHÍCULOS</li>
+                <li class="Header-li">VEHÍCULOS
+                  <ul class="Sublist-ul">
+                    <li class="Sublist-li">Vechículos en venta</li>
+                  </ul>
+                </li>
                 <li class="Header-li">CONTACTO</li>
-            </ul>
+              </ul>
         </nav>
         
     </header>
